# QualityScaler

./: .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  PACKAGING.md  QualityScaler.py  QualityScaler.spec  README.md  README.txt  activate.sh  build-appimage.sh  go.mod  go.sum  install  install.py  lint.sh  make_venv.py  pyproject.toml  qualityscaler_tensorrt.def  requirements-tensorrt.txt  requirements.testing.txt  requirements.txt  server.html  setup.bat  setup.py  start_upscaler.bat  tox.ini  upload_package.sh
.github/: FUNDING.yml
.github/workflows/: lint.yml  push_macos.yml  push_ubuntu.yml  push_win.yml  release.yml
AI/: DITN_x4.pth  README.txt  RealSRx4_Anime.pth
AI-onnx/: LINK_HERE.txt
cmd/qualityscaler-fyne/: main.go
cmd/qualityscaler-go/: main.go
internal/app/: config.go
internal/core/: ai.go  ai_alpha_bench_test.go  ai_alpha_test.go  ai_backend.go  ai_tensorrt_cgo.go  ai_tensorrt_cpp.h  ai_tensorrt_stub.go  ai_tensorrt_types.go  image.go  image_gocv.go  image_gocv_stub.go  image_test.go  log_buffer.go  options.go  pipeline.go  proc_other.go  proc_windows.go  video.go  video_test.go  windows_dll.go
internal/gui/: app.go  proc_other.go  proc_windows.go  ui_text.go
internal/gui_fyne/: app.go  drop_target.go  file_picker.go  proc_other.go  proc_windows.go
internal/tensorrt_dll/: CMakeLists.txt  ai_tensorrt.cpp  ai_tensorrt_cpp.cpp  ai_tensorrt_cpp.h  build.bat  build_mingw_output.txt  build_output.txt  build_trt_dll.bat
scripts/: Build-Installer.ps1  Package-Release.ps1  Prepare-Icon.ps1  build-tensorrt-dll.ps1  build-tensorrt-pure-cgo.bat  build-tensorrt-pure-cgo.ps1  convert-to-tensorrt.bat  install-opencv-gocv.ps1  install-tensorrt-env.ps1  setup-tensorrt.ps1  update-tensorrt-import-lib.ps1  validate_tensorrt_engines.bat  validate_tensorrt_engines.ps1
src/quality_scaler/: QualityScaler.py  cli.py
src/quality_scaler/assets/: example.txt
src/qualityscaler/: QualityScaler.py  cli.py
src/qualityscaler/AI/: readme.txt
src/qualityscaler/assets/: out.txt
tests/: test_cli.py
